src/test/ui/traits/static-method-generic-inference.stderr
error[E0790]: cannot call associated function on trait without specifying the corresponding `impl` type
  --> $DIR/static-method-generic-inference.rs:24:25
   |
LL |         fn new() -> T;
   |         -------------- `HasNew::new` defined here
...
LL |     let _f: base::Foo = base::HasNew::new();
   |                         ^^^^^^^^^^^^^^^^^ cannot call trait method as a free function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0790`.
